# talk2computer

./: .gitignore  README.md  pyproject.toml
src/talk2computer/: __main__.py  _cuda_paths.py  app.py  audio.py  config.py  hotkey.py  injector.py  overlay.py  platform_defaults.py  transcribe.py  tray.py
